# aur-python-packer

./: .gitignore  Makefile  README.md  install-all.sh  push-to-aur.sh  pyproject.toml  specs.org
aur_python_packer/: audit.py  builder.py  cli.py  clients.py  config.py  generator.py  graph_utils.py  logger.py  main.py  metadata.py  repo.py  resolver.py  sandbox.py  state.py  utils.py
aur_python_packer/templates/: PKGBUILD.j2
manager/: Makefile  pyproject.toml
manager/src/aur_lifecycle_mgr/: audit.py  builder.py  cli.py  generator.py  main.py  repo.py  resolver.py
manager/tests/: integration_test.sh  test_audit.py  test_builder.py  test_generator.py  test_integration.py  test_repo.py  test_resolver.py
openspec/changes/2026-04-30-fs-cleanup/: tasks.md
openspec/changes/2026-04-30-new-cli-commands-and-options/: tasks.md
openspec/changes/2026-04-30-smart-builder-and-fallbacks/: proposal.md
openspec/changes/2026-04-30-smart-resolver/: proposal.md
openspec/changes/aur-lifecycle-mgr/: tasks.md
openspec/changes/aur-package-scanner/: design.md  proposal.md  tasks.md
openspec/changes/bwrap-chroot/: tasks.md
openspec/changes/extensive-logging/: proposal.md
openspec/changes/fs-cleanup/: design.md  proposal.md
openspec/changes/human-readable-output/: tasks.md
openspec/changes/manjaro-chrootbuild/: proposal.md  (+1 more)
tests/: integration_test.sh  test_audit.py  test_builder.py  test_cli.py  test_clients.py  test_config.py  test_fallbacks.py  test_generator.py  test_integration.py  test_metadata.py  test_repo.py  test_resolver.py  test_sandbox.py  test_state.py
(+84 files in other folders)
