[tool.poetry]
name = "aur-python-packer"
version = "0.1.0"
description = "Automated AUR Package Lifecycle Manager"
authors = ["krvkir"]
readme = "specs.org"
packages = [{include = "aur_python_packer"}]
include = ["aur_python_packer/templates/*.j2"]

[tool.poetry.dependencies]
python = "^3.14"
click = "^8.1"
networkx = "^3.2"
jinja2 = "^3.1"
requests = "^2.31"
packaging = "^23.2"
py-dagviz = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
aur-python-packer = "aur_python_packer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
