[project]
name = "aur-lifecycle-mgr"
version = "0.1.0"
description = "Automated AUR Package Lifecycle Manager"
dependencies = [
    "click",
    "networkx",
    "jinja2",
    "requests",
]

[project.scripts]
aur-mgr = "aur_lifecycle_mgr.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
